--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -75,8 +75,10 @@
     },
     "userBox": {
         "followButton": "FOLLOW",
+        "unfollowButton": "UNFOLLOW",
+        "addToAnotherCircle": "ADD TO ANOTHER CIRCLE",
+        "addToCircle": "ADD TO A CIRCLE",
         "cancelButton": "CANCEL",
-        "numberOfCircleButton": "${circlesCount} Circles",
         "doneButton": "DONE",
         "groupNamePlaceholder": "Group Name",
         "createCircleTooltip": "Create Circle"
